<resources>
    <string name="app_name">آموزشیار ضایعه نخاعی</string>

    <string name="old_password">گذرواژه قدیمی: </string>
    <string name="new_password">گذرواژه جدید: </string>
    <string name="confirm_password">تکرار گذرواژه جدید: </string>

    <string name="action_edit_profile">ویرایش پروفایل</string>
    <string name="action_change_password">تغییر گذرواژه</string>
    <string name="action_help">راهنما</string>
    <string name="action_settings">تنظیمات</string>

    <string name="profile_category">پروفایل</string>
    <string name="recently_watched_cases_category">مورد علاقه ها</string>
    <string name="exit_category">خروج</string>
    <string name="recommended_cases_category">حرکات پیشنهادی برای شما</string>

    <string name="title_activity_edit_profile">ویرایش پروفایل</string>
    <string name="title_activity_recommendation">حرکات پیشنهادی برای شما</string>
    <string name="title_activity_profile">پروفایل</string>
    <string name="title_activity_favorite_cases">مورد علاقه ها</string>

    <string name="gender">جنسیت:</string>
    <string name="upper_strength">قوای جسمانی بالاتنه:</string>
    <string name="xp_level">میزان تجربه:</string>
    <string name="birthday">تاریخ تولد:</string>
    <string name="email">ایمیل:</string>
    <string name="sci_type">نوع ضایعه نخاعی:</string>
    <string name="ok">تایید</string>
    <string name="cancel">انصراف</string>

    <string-array name="sci_type_arrays">
        <item>C1</item>
        <item>C2</item>
        <item>C3</item>
        <item>C4</item>
        <item>C5</item>
        <item>C6</item>
        <item>C5 C6</item>
        <item>C7</item>
        <item>C8</item>
        <item>T1</item>
        <item>T2</item>
        <item>T3</item>
        <item>T4</item>
        <item>T5</item>
        <item>T6</item>
        <item>T7</item>
        <item>T8</item>
        <item>T9</item>
        <item>T10</item>
        <item>T11</item>
        <item>T12</item>
    </string-array>

    <string-array name="gender_arrays">
        <item>مرد</item>
        <item>زن</item>
    </string-array>

    <string-array name="upper_strength_arrays">
        <item>نیازمند کمک</item>
        <item>ضعیف</item>
        <item>معمولی</item>
        <item>قوی</item>
    </string-array>

    <string name="weight">وزن:</string>
    <string name="height">قد:</string>

    <string name="approved_message">اطلاعات به روز رسانی شد</string>
    <string name="wrong_password">گذرواژه وارد شده اشتباه است</string>
    <string name="passwords_dont_match">عدم تطابق گذرواژه های انتخابی</string>
    <string name="approved_password">گذرواژه با موفقیت به روز رسانی شد</string>
    <string name="password_help">به نکات زیر توجه کنید:\n\nگذرواژه می بایست حداقل 6 کاراکتر باشد.\nگذرواژه می بایست حداقل شامل یک عدد و یک حرف باشد.\nگذرواژه می بایست با کیبورد انگلیسی تایپ شود.</string>
    <string name="action_star">مورد علاقه</string>
    <string name="login">ورود</string>
    <string name="sign_up">ثبت نام</string>
    <string name="password">گذرواژه</string>
    <string name="phone_number">شماره تلفن همراه</string>
    <string name="forgot_password">یادآوری گذرواژه</string>
    <string-array name="xp_level_arrays">
        <item>مبتدی</item>
        <item>متوسط</item>
        <item>تجربه کافی</item>
    </string-array>

    <string-array name="homeList">
        <item>پروفایل</item>
        <item>حرکات پیشنهادی برای شما</item>
        <item>تمرین های پیشنهادی برای شما</item>
        <item>مورد علاقه ها</item>
        <item>راهنمای برنامه</item>
    </string-array>
    <string name="edit">ویرایش</string>
    <string name="editing">انصراف</string>
    <string name="edit_message">جهت ثبت تغییرات دکمه تایید را فشار دهید</string>
    <string name="account_error">حساب کاربری یا گذرواژه اشتباه است</string>
    <string name="log_out">خروج از حساب کاربری</string>
    <string name="exercise_label">تمرین های پیشنهادی برای شما</string>

    <string-array name="profileList">
        <item>ایمیل:</item>
        <item>تاریخ تولد:</item>
        <item>نوع ضایعه نخاعی:</item>
        <item>میزان تجربه:</item>
        <item>قوای جسمانی بالاتنه:</item>
        <item>جنسیت:</item>
        <item>قد:</item>
        <item>وزن:</item>

    </string-array>

    <string-array name="helpStringArray">
        <item> help_main </item>
        <item> help_rec </item>
        <item> help_exercise </item>
        <item> help_show_case </item>
        <item> help_show_exercise </item>
        <item> help_profile </item>
        <item> help_edit_profile </item>
        <item> help_change_pass </item>
        <item> help_fav </item>

    </string-array>

    <string-array name="helpArray">
        <item> main_help </item>
        <item> recommend_help </item>
        <item> exercise_help </item>
        <item> show_case_help </item>
        <item> show_exercise_help </item>
        <item> profile_help </item>
        <item> edit_profile_help </item>
        <item> change_password_help </item>
        <item> fav_help </item>

    </string-array>
    <string name="title_activity_loading_data">LoadingDataActivity</string>
    <string name="title_activity_tut">TutActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

</resources>
