<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:layoutDirection="rtl"
            android:paddingBottom="@dimen/vertical_margin"
            android:paddingLeft="@dimen/horizontal_margin"
            android:paddingRight="@dimen/horizontal_margin"
            android:paddingTop="@dimen/vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="com.example.elmira.sci.activities.ChangePasswordActivity"
            tools:showIn="@layout/activity_change_password">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/oldPasswordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_margin_large"
            android:layout_marginStart="@dimen/horizontal_margin_large"
            android:text="@string/old_password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/oldPassword"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/simple_box"
            android:padding="@dimen/default_padding"
            android:ems="10"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/newPasswordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_margin_large"
            android:layout_marginStart="@dimen/horizontal_margin_large"
            android:layout_marginTop="10dp"
            android:text="@string/new_password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/simple_box"
            android:padding="@dimen/default_padding"
            android:ems="10"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/confirmPasswordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_margin_large"
            android:layout_marginStart="@dimen/horizontal_margin_large"
            android:layout_marginTop="10dp"
            android:text="@string/confirm_password"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/simple_box"
            android:ems="10"
            android:inputType="textPassword"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/vertical_margin_large"
            android:orientation="horizontal">


            <Button
                android:id="@+id/ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/green_button_dark"
                android:text="@string/ok"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"/>


            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/horizontal_margin"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:background="@drawable/red_button_shape"
                android:text="@string/cancel"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView
            android:id="@+id/password_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_button_shape"
            android:padding="@dimen/vertical_margin"
            android:text="@string/password_help"
            android:textSize="@dimen/text_size_small"
            android:visibility="gone"/>

    </LinearLayout>


</ScrollView>
